$unionWith explain loses information from any stages in sub-pipeline which get absorbed into cursor stage

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.7.0, 4.4.2
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • v4.4
    • Query 2020-09-07, Query 2020-09-21
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we explain a pipeline with mode "executionStats" or above, we first execute the pipeline to completion and then serialize the individual stages. If one of those stages is a $unionWith, then the first phase will target and optimize the sub-pipeline, absorbing any possible stages into the $cursor stage. When serialize() is subsequently called against the $unionWith to generate the 'stages' element of explain, we do the same process again except we've lost any stages which were pushed down into the $cursor/$mergeCursors.

            Assignee:
            Nicholas Zolnierz
            Reporter:
            Ted Tuckman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: