SERVER-50246 Fix $unionWith explain with mode 'executionStats' to account for pushed down stages

(cherry picked from commit 4edfad49d10c3f75cf1fbc2f909e424d79f4a7e1)